# proclaim

./: 404.html  LICENSE  README.md  README.qmd  index.html  linkml.yml  linkml_issues.md  mode.json  pyproject.toml  ro-crate-metadata.json
.github/workflows/: build.yml
classes/ContainerImage/: index.html
classes/DockerImage/: index.html
classes/ParameterConnection/: index.html
classes/SIFImage/: index.html
properties/connection/: index.html
properties/containerImage/: index.html
properties/environment/: index.html
properties/md5/: index.html
properties/registry/: index.html
properties/resourceUsage/: index.html
properties/sha1/: index.html
properties/sha256/: index.html
properties/sha512/: index.html
properties/sourceParameter/: index.html
properties/tag/: index.html
properties/targetParameter/: index.html
search/: search_index.json
src/proclaim/: mkdocs_generator.py  profile.py  util.py
src/proclaim/html/: generator.py  profile.jinja2
src/proclaim/html/templates/: profile.jinja2  vocab.jinja2
src/proclaim/mode/: generator.py  schema.py
src/proclaim/profile_crate/: generator.py  make_schema.py  schema.py
src/proclaim/profile_html/: generator.py
src/proclaim/profile_html/templates/: profile.jinja2
src/proclaim/vocabulary/: __init__.py  class.jinja2  property.jinja2
test/: conftest.py  formal_parameter.yaml  process_run.yaml  schema_org.yaml  schemaorg.yaml  schemaorg_current.yaml  test_crate.py  test_html.py  test_mode.py  test_template.jinja2  test_vocab.py  workflow-ro-crate.yaml
