[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "proclaim"
version = "0.0.1"
authors = [
    {name = "Michael Milton", email = "michael.r.milton@gmail.com"},
]
description = "My package description"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "linkml",
    "click",
    "linkml_runtime",
    "mkdocs"
]

[project.scripts]
generate-mode = "proclaim.mode.generator:cli"
