[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "proclaim"
version = "0.0.1"
authors = [
    {name = "Michael Milton", email = "michael.r.milton@gmail.com"},
]
description = "Create RO-Crate profiles from LinkML schemas"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "linkml",
    "click",
    "linkml_runtime",
    "mkdocs",
    "rdfcrate>=0.2.0",
]

[project.scripts]
proclaim-mode = "proclaim.mode.generator:cli"
proclaim-profile = "proclaim.profile_crate.generator:cli"

[tool.uv]
dev-dependencies = [
    "bash-kernel>=0.10.0",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
]

[tool.uv.sources]
rdfcrate = { git = "https://github.com/WEHI-SODA-Hub/RdfCrate" }
